# OpenHotas

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: commands.rs  display.rs  main.rs  transport.rs
crates/openhotas-filters/: Cargo.toml
crates/openhotas-filters/src/: calibration.rs  crc32.rs  deadzone.rs  ema.rs  lib.rs  max_jump.rs  response_curve.rs  tuning.rs
crates/openhotas-protocol/: Cargo.toml
crates/openhotas-protocol/src/: config.rs  diagnostics.rs  error.rs  frame.rs  lib.rs  request.rs  response.rs  version.rs
dev/: CLAUDE.md  README.md  git_workflow.md
dev/context/: 01_architecture.md  02_hardware_specs.md  03_hardware_pinout.md  04_software_contracts.md  05_coding_guidelines.md  README.md
dev/docs/: dev_environment_setup.md
dev/logs/: CHANGELOG.md  DECISIONS.md  RISKS.md  v1_0_build.md  v1_1_build.md  v1_21_build.md  v1_22_build.md  v1_23_build.md  v1_25_build.md  v1_2_build.md  v1_3_build.md  v1_4_build.md  v1_4_docs_comentarios.md  v1_4_windows_gui_fixes_changelog.md
dev/logs/old_log_arch/: README.md  changelog_extracao.md  v1_24_build.md  v1_26_build.md  v1_27_gui_changelog.md  v1_28_gui_theme_system_changelog.md  v1_2_build.md  v1_3_build.md  v1_4_build.md
dev/plan/: 1_21 cdc serial.md  1_21 usb flash seguro.md  firmware_update_usb_boot.md  v1_21_versioning.md  v1_3_gui_controls.md  v1_4_potential_features.md  v2_roadmap.md
dev/plan/backlog/: axis_compensation.md  macros.md
dev/roadmap/: analise-firmware-openhotas-v2.md  firmware_update_usb_boot.md  roadmap.md
firmware/: Cargo.toml  README.md  build.rs  deny.toml  memory.x  openhotas.uf2
firmware/src/: constants.rs  main.rs  spi_bus.rs
firmware/src/axis/: mod.rs  pipeline.rs
firmware/src/calibration/: cal_store.rs  data.rs  mod.rs
firmware/src/config/: mod.rs  runtime.rs  settings.rs  stored_config_v2.rs
firmware/src/diagnostics/: mod.rs  runtime_stats.rs  sensor_health.rs
firmware/src/filters/: deadzone.rs  ema.rs  expo.rs  max_jump.rs  mod.rs  response_curve.rs
firmware/src/sensors/: mcp23s.rs  mod.rs  mt6826.rs
firmware/src/storage/: flash.rs  mod.rs
firmware/src/tasks/: cdc.rs  cdc_handlers.rs  diagnostic.rs  hid.rs  input.rs  mod.rs
firmware/src/usb/: descriptor.rs  hid_gamepad.rs  mod.rs
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/.storybook/: main.ts  preview.tsx
gui/src/: App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs
gui/src/components/axes/: AxisTabTrigger.tsx
gui/src/components/buttons/: ButtonsPage.stories.tsx  ButtonsPage.tsx
gui/src/components/calibration/: Calibration.stories.tsx  Calibration.tsx
gui/src/components/config/: UnsavedChangesBar.tsx
gui/src/components/curves/: CurveEditor.stories.tsx  CurveEditor.tsx  CurvePage.stories.tsx  CurvePage.tsx
gui/src/components/dashboard/: Dashboard.stories.tsx  Dashboard.tsx
gui/src/components/diagnostics/: Diagnostics.stories.tsx  Diagnostics.tsx
gui/src/components/layout/: ConnectBar.stories.tsx  ConnectBar.tsx  WindowBar.tsx
gui/src/components/settings/: SettingsPage.tsx
gui/src/components/ui/: alert.stories.tsx  alert.tsx  badge.stories.tsx  badge.tsx  button.stories.tsx  button.tsx  card.stories.tsx  card.tsx  dialog.stories.tsx  dialog.tsx  input.stories.tsx  input.tsx  label.stories.tsx  label.tsx  scroll-area.stories.tsx  scroll-area.tsx  select.stories.tsx  select.tsx  slider.stories.tsx  slider.tsx  switch.stories.tsx  switch.tsx  tabs.stories.tsx  tabs.tsx  tooltip.stories.tsx  tooltip.tsx
gui/src/hooks/: useCalibration.ts  useDeviceConfig.ts  useDevicePolling.ts
gui/src/lib/: tauri.ts
gui/src/mocks/: device.ts
gui/src/theme/: ThemeProvider.tsx  colors.ts  theme.css  themes.ts
gui/src/types/: protocol.ts
hardware/: README.md
hardware/MT6826S/: BOM_mt6826s.xlsx  PickAndPlace_mt6826s.xlsx  mt6826s shield.stl  mt6826s.xlsx  readme.md
hardware/Pico2_shield/: readme.md
hardware/Raspberry Pico 2 shield/: readme.md
hardware/mt6826S/: BOM_Board_mt6826s.xlsx  readme.md
hardware/mt6826S pcb complete/: PickAndPlace_mt6826s.xlsx  readme.md
