[workspace]
resolver = "2"
members = [
    "firmware",
    "crates/openhotas-protocol",
    "cli",
    "gui/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }

[profile.release]
debug = 2
opt-level = "s"
lto = true

[profile.dev]
opt-level = "s"
