[package]
name = "openhotas-cli"
version = "1.4.0"
edition = "2021"
description = "OpenHOTAS PC configuration tool — CLI for V1.23+"
license = "MIT"

[dependencies]
openhotas-protocol = { path = "../crates/openhotas-protocol", features = ["std"] }
postcard = "1"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4", default-features = false }
