[package]
name = "openhotas"
version = "1.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "openhotas"
path = "src/main.rs"
test = false

[dependencies]
embassy-rp = { version = "0.10", features = [
    "rp235xa",
    "time-driver",
    "critical-section-impl",
    "unstable-pac",
    "rom-v2-intrinsics",
    "imagedef-secure-exe",
] }
embassy-executor = { version = "0.10", features = [
    "executor-thread",
    "platform-cortex-m",
] }
embassy-usb = "0.5"
embassy-sync = "0.5"
embassy-time = "0.4"
embassy-futures = "0.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1"
libm = "0.2"
openhotas-protocol = { path = "../crates/openhotas-protocol" }
openhotas-filters = { path = "../crates/openhotas-filters" }
postcard = { workspace = true }
serde = { workspace = true }
