[package]
name = "openhotas-protocol"
version = "1.3.0"
edition = "2021"
license = "MIT"

[features]
default = []
std = ["postcard/use-std", "serde/std"]

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
heapless = "0.8"

[dev-dependencies]
postcard = { workspace = true, features = ["use-std"] }
