[package]
name = "openhotas-gui"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "openhotas-gui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
serialport = "4"

openhotas-protocol = { path = "../../crates/openhotas-protocol" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
