[package]
name = "openhotas-gui"
version = "1.4.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "openhotas-gui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
serialport = "4"

openhotas-protocol = { path = "../../crates/openhotas-protocol" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
